fixes overflow problem

--- a/main.css
+++ b/main.css
@@ -539,6 +539,15 @@ a {
         -ms-flex-align: center;
             align-items: center;
   }
+  .cv-box .right-section .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -546,13 +555,18 @@ a {
     overflow-x: hidden;
   }
   .cv-box {
-    display: -ms-grid;
-    display: grid;
-    place-items: center;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: auto;
     margin: 0;
     padding: 0;
-    max-width: auto;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
   .cv-box .nav {
     -webkit-box-pack: end;
@@ -590,7 +604,7 @@ a {
   .cv-box .nav .nav-active {
     -webkit-transform: translateX(0%);
             transform: translateX(0%);
-    width: 30%;
+    width: 35%;
   }
   .cv-box .nav .burger {
     display: block;
